# datalake-grupy

./: .gitignore  Makefile  README.md  club_wc_stats.csv  docker-compose.yaml  pyproject.toml
app/: setup.py
app/analysis/: club_world_cup_overview.py  plot_rates_time_series.py
app/ingestion/api/: __init__.py
app/ingestion/pipelines/: dummy_pipeline.py  etl_exch_rate_with_ipca.py
app/lake/: scan_delta.py  write_delta.py
config/: env.py  object_storage.py
