[project]
name = "datalake"
version = "0.1.0"
description = ""
authors = [
    {name = "José Thomaz",email = "josethomaz2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "polars (>=1.31.0,<2.0.0)",
    "deltalake (>=1.0.2,<2.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "s3fs (>=2025.5.1,<2026.0.0)",
    "prefect (>=3.4.7,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4.20250611"

